--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-# OpenAI API Key
-OPENAI_API_KEY=
+# API Keys
+OPENAI_API_KEY=sk-your-openai-api-key
+SERPAPI_API_KEY=your-serpapi-key
+WEATHER_API_KEY=your-openweathermap-key
 
-# SerpAPI Key for Google Shopping
-SERPAPI_API_KEY=
+# AWS Configuration
+AWS_ACCESS_KEY_ID=AKIAXXXXXXXXXXXXXXXX
+AWS_SECRET_ACCESS_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=shopping-assistant-data
 
-# Google Shopping Region (default: CH)
+# Optional Settings
 GOOGLE_SHOPPING_REGION=PK
